fix spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,7 @@ h1{
     background-color: lavender;
     color: rgb(128, 92, 136);
     text-align: left;
-    margin-left: 135px;
+    margin-left: 85px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 40px;
 }
@@ -51,7 +51,7 @@ nav a{
 .firstImage {
     width: 350px;
     height: auto;
-    margin-left: 100px;
+    margin-left: 50px;
     border: 10px rgb(128, 92, 136);
     /* margin-right: 100px; */
 }
